[package]
name = "bbd"
version = "0.4.4"
edition = "2024"
description = "Binary Braille Dump"
license = "MIT"
repository = "https://github.com/qtfkwk/bbd"

[dependencies]
anyhow = "1.0.102"
bbd-lib = { version = "0.4.4", path = "../lib" }
clap = { version = "4.5.60", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
