[package]
name = "bbd"
version = "0.4.5"
edition = "2024"
description = "Binary Braille Dump"
license = "MIT"
repository = "https://github.com/qtfkwk/bbd"

[dependencies]
anyhow = "1.0.102"
bbd-lib = { version = "0.4.5", path = "../lib" }
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
